--- a/app/Resources/views/catalog.html.twig
+++ b/app/Resources/views/catalog.html.twig
@@ -1,3 +1,7 @@
-<h1>
-    Hello from catalog, {{ user.username }}
-</h1>
+{% extends 'base.html.twig' %}
+
+{% block body %}
+    <h1>
+        {{ user.username }}
+    </h1>
+{% endblock %}
