--- a/app/Resources/views/login.html.twig
+++ b/app/Resources/views/login.html.twig
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html>
-    <head>
+{% extends "base.html.twig" %}
 
-    </head>
-    <body>
-
+{% block body %}
+{{ parent() }}
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
@@ -22,8 +19,7 @@
             <input type="hidden" name="_target_path" value="/account" />
         #}
 
-        <button type="submit">login</button>
+        <button type="submit" class="waves-effect waves-light btn">login</button>
     </form>
 
-    </body>
-</html>
+{% endblock body %}
