Added styling to "/admin" and "/admin/new". Materialize css, fonts and js were moved to "web/vendor/materialize" directory.

--- a/app/Resources/views/admin/product/list.html.twig
+++ b/app/Resources/views/admin/product/list.html.twig
@@ -1,36 +1,47 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {{ parent() }}
     <div class="container">
         <div class="row">
 
             <div class="col s12">
-                <div class="pull right s1" style="margin-bottom: 10px; margin-top: 20px;">
-                    <a href="{{ path('admin_product_new') }}" class="btn">Add <i class="small material-icons">add_circle_outline</i></a>
+                <div class="row valign-wrapper">
+                    <div class="col s10 valign"><h2>Products</h2></div>
+                    <div class="col s2 valign">
+                        <a href="{{ path('admin_product_new') }}" class="btn">Add<i class="material-icons right">add_circle_outline</i></a>
+                    </div>
                 </div>
+                <div class="col s12">
 
-                <h1>Products</h1>
-                <table class="striped">
-                    <tr>
-                        <th>Product</th>
-                        <th>Category</th>
-                        <th>SKU</th>
-                        <th>Description</th>
-                        <th>Created at</th>
-                        <th>Updated at</th>
-                    </tr>
-                    {% for product in products %}
-                        <tr>
-                            <td>{{ product.name }}</td>
-                            <td>{{ product.category }}</td>
-                            <td>{{ product.sku }}</td>
-                            <td>{{ product.description }}</td>
-                            <td>{{ product.createdAt|date }}</td>
-                            <td>{{ product.updatedAt|date }}</td>
-                        </tr>
-                    {% endfor %}
-                </table>
+                    <table class="striped bordered">
+                        <thead>
+                            <tr>
+                                <th data-field="product">Product</th>
+                                <th>Category</th>
+                                <th>SKU</th>
+                                <th>Description</th>
+                                <th>Created at</th>
+                                <th>Updated at</th>
+                                <th> </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        {% for product in products %}
+                            <tr>
+                                <td>{{ product.name }}</td>
+                                <td>{{ product.category }}</td>
+                                <td>{{ product.sku }}</td>
+                                <td>{{ product.description }}</td>
+                                <td>{{ product.createdAt|date("d/m/Y") }}</td>
+                                <td>{{ product.updatedAt|date("d/m/Y") }}</td>
+                                <td>
+                                    <a href="{{ path('admin_product_new', {'id': product.id}) }}"><i class="material-icons grey-text">edit</i></a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
