--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,20 +2,34 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Product Catalog{% endblock %}</title>
         {% block stylesheets %}
             <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-            <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+            <link type="text/css" rel="stylesheet" href="{{ asset('vendor/materialize/css/materialize.min.css') }}"  media="screen,projection"/>
             <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+        {% for msg in app.session.flashBag.get('success') %}
+            <div class="container">
+                <div class="row">
+                    <div class="col s12 m5">
+                        <div class="card-panel teal">
+                            <span class="white-text">
+                                {{ msg }}
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+
         {% block body %}{% endblock %}
         {% block javascripts %}
-
-            <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-            <script src="js/materialize.min.js"></script>
+            <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+            <script type="text/javascript" src="{{ asset('vendor/materialize/js/materialize.min.js') }}"></script>
         {% endblock %}
     </body>
 </html>
