--- a/app/Resources/views/catalog.html.twig
+++ b/app/Resources/views/catalog.html.twig
@@ -1,7 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>
-        {{ user.username }}
-    </h1>
+    <div>
+        <div>
+            Hello, <b>{{ user.username }}</b>!
+        </div>
+        <div>
+            <a href="{{ path('logout') }}" class="btn">Logout</a>
+        </div>
+    </div>
+
+
 {% endblock %}
