--- a/app/Resources/views/login.html.twig
+++ b/app/Resources/views/login.html.twig
@@ -5,20 +5,21 @@
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    <form action="{{ path('login') }}" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" />
+    <div class="row">
+        <form action="{{ path('login') }}" method="post" class="col s6">
+            <div class="row">
+                <div class="input-field col s12">
+                    <input type="text" id="username" name="_username" value="{{ last_username }}" class="validate">
+                    <label for="username">Email:</label>
+                </div>
+                <div class="input-field col s12">
+                    <input type="password" id="password" name="_password" class="validate">
+                    <label for="password">Password:</label>
+                </div>
+            </div>
+            <button type="submit" class="btn">login</button>
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="_password" />
-
-        {#
-            If you want to control the URL the user
-            is redirected to on success (more details below)
-            <input type="hidden" name="_target_path" value="/account" />
-        #}
-
-        <button type="submit" class="btn">login</button>
-    </form>
+        </form>
+    </div>
 
 {% endblock body %}
