Added kind of validation when adding a new product. Added Product edit form at "/admin/product/{id}/edit"

--- a/app/Resources/views/admin/product/_form.html.twig
+++ b/app/Resources/views/admin/product/_form.html.twig
@@ -7,5 +7,5 @@
                     {{ form_row(productForm.updatedAt) }}
                     {{ form_row(productForm.isActive) }}
 
-<button type="submit" class="btn" formnovalidate>Save</button>
+<button type="submit" class="btn" formnovalidate>{{ buttonText }}</button>
 {{ form_end(productForm) }}
