--- a/app/Resources/views/admin/product/edit.html.twig
+++ b/app/Resources/views/admin/product/edit.html.twig
@@ -4,11 +4,12 @@
     <div class="container">
         <div class="row">
             <div class="col s6">
-                <h2>New product</h2>
+                <h2>Edit product</h2>
                 {{ include('admin/product/_form.html.twig', {
-                    'buttonText':'Add'
+                    'buttonText':'Save'
                 }) }}
             </div>
         </div>
     </div>
 {% endblock %}
+
