--- a/app/Resources/views/admin/product/list.html.twig
+++ b/app/Resources/views/admin/product/list.html.twig
@@ -35,7 +35,7 @@
                                 <td>{{ product.createdAt|date("d/m/Y") }}</td>
                                 <td>{{ product.updatedAt|date("d/m/Y") }}</td>
                                 <td>
-                                    <a href="{{ path('admin_product_new', {'id': product.id}) }}"><i class="material-icons grey-text">edit</i></a>
+                                    <a href="{{ path('admin_product_edit', {'id': product.id}) }}"><i class="material-icons grey-text">edit</i></a>
                                 </td>
                             </tr>
                         {% endfor %}
