Added major functiononality for password recovery.

--- a/app/Resources/views/password-recovery.html.twig
+++ b/app/Resources/views/password-recovery.html.twig
@@ -3,6 +3,9 @@
 {% block body %}
     <div class="row">
         <div class="row col s6 push-s3">
+            {% if message %}
+                <div class="recovery-error">{{ message }}</div>
+            {% endif %}
             <div class="col s12">Recover your password</div>
             {{ form_start(form) }}
             <form id="recovery-form-send" action="{{ path('password_recovery_confirmation') }}" class="col s12">
