Testing roles. Will be done good a bit later

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,14 +13,17 @@
     </head>
     <body>
         <header class="header">
-            <ul>
-                {% if is_granted('ROLE_USER') %}
-                    <li><a href="{{ path('security_logout') }}" class="btn">Logout</a></li>
-                {% else %}
-                    <li><a href="{{ path('security_login') }}" class="btn">Login</a></li>
-                {% endif %}
-            </ul>
+            <nav>
 
+                <ul>
+                    {% if is_granted('ROLE_USER') %}
+                        <li><a href="{{ path('security_logout') }}" class="btn">Logout</a></li>
+                    {% else %}
+                        <li><a href="{{ path('security_login') }}" class="btn">Login</a></li>
+                        <li><a href="{{ path('user_register') }}" class="btn-flat">Register</a></li>
+                    {% endif %}
+                </ul>
+            </nav>
         </header>
         {% for msg in app.session.flashBag.get('success') %}
             <div class="container">
