--- a/app/Resources/views/admin/product/list.html.twig
+++ b/app/Resources/views/admin/product/list.html.twig
@@ -16,6 +16,7 @@
                     <table class="striped bordered">
                         <thead>
                             <tr>
+                                <th>ID</th>
                                 <th data-field="product">Product</th>
                                 <th>Category</th>
                                 <th>SKU</th>
@@ -28,6 +29,7 @@
                         <tbody>
                         {% for product in products %}
                             <tr>
+                                <td>{{ product.id }}</td>
                                 <td>{{ product.name }}</td>
                                 <td>{{ product.category }}</td>
                                 <td>{{ product.sku }}</td>
