Password recovery chahged. Now new password encode works fine.

--- a/app/Resources/views/password-recovery-confirm.html.twig
+++ b/app/Resources/views/password-recovery-confirm.html.twig
@@ -1,5 +1,21 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
+    <div class="row">
+        <div class="row col s6 push-s3">
+            {% if error %}
+                <div class="card-panel red lighten-2">{{ error }}</div>
+            {% endif %}
+            <div class="col s12"><h2>Recover your password</h2></div>
+            {{ form_start(form, {'class': 'col s12', 'id': "recovery-form-confirm"}) }}
+            <div class="input-field col s12">
+                {{ form_row(form.password.first, { 'class': 'validate' }) }}
+            </div>
+            <div class="input-field col s12">
+                {{ form_row(form.password.second, { 'class': 'validate' }) }}
+            </div>
+            <input type="submit" class="btn btn-block" value="{{ btn_confirm_text }}">
+            {{ form_end(form) }}
+        </div>
+    </div>
 {% endblock body %}
