--- a/app/Resources/views/password-recovery.html.twig
+++ b/app/Resources/views/password-recovery.html.twig
@@ -3,18 +3,17 @@
 {% block body %}
     <div class="row">
         <div class="row col s6 push-s3">
-            {% if message %}
-                <div class="recovery-error">{{ message }}</div>
+            {% if error %}
+                <div class="recovery-error">{{ error }}</div>
             {% endif %}
-            <div class="col s12">Recover your password</div>
-            {{ form_start(form) }}
-            <form id="recovery-form-send" action="{{ path('password_recovery_confirmation') }}" class="col s12">
+            <div class="col s12"><h2>Password recovery</h2></div>
+            {{ form_start(form, {'class': 'col s12', 'id': "recovery-form-send"}) }}
                 <div class="input-field col s12">
-                    <input type="text" id="email" name="_email" placeholder="Enter your email" class="validate">
-                    <label for="username">Email:</label>
+                    {{ form_row(form.email, { 'class': 'validate' }) }}
                 </div>
                 <input type="submit" class="btn btn-block" value="{{ btn_send_text }}">
-            </form>
+                {{ form_rest(form) }}
+            {{ form_end(form) }}
         </div>
     </div>
 {% endblock body %}
