Added common form error file

--- a/app/Resources/views/password-recovery-confirm.html.twig
+++ b/app/Resources/views/password-recovery-confirm.html.twig
@@ -3,11 +3,12 @@
 {% block body %}
     <div class="row">
         <div class="row col s6 push-s3">
-            {% if error %}
-                <div class="card-panel red lighten-2">{{ error }}</div>
-            {% endif %}
             <div class="col s12"><h2>Recover your password</h2></div>
             {{ form_start(form, {'class': 'col s12', 'id': "recovery-form-confirm"}) }}
+            {% if error %}
+                {% include 'form-error.html.twig' with {'error': form.errors, 'array': true} %}
+            {% endif %}
+
             <div class="input-field col s12">
                 {{ form_row(form.password.first, { 'class': 'validate' }) }}
             </div>
