--- a/app/Resources/views/password-recovery.html.twig
+++ b/app/Resources/views/password-recovery.html.twig
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="row col s6 push-s3">
             {% if error %}
-                <div class="recovery-error">{{ error }}</div>
+                {% include 'form-error.html.twig' with {'error': error} %}
             {% endif %}
             <div class="col s12"><h2>Password recovery</h2></div>
             {{ form_start(form, {'class': 'col s12', 'id': "recovery-form-send"}) }}
