--- a/app/Resources/views/password-recovery-email.html.twig
+++ b/app/Resources/views/password-recovery-email.html.twig
@@ -2,7 +2,11 @@
 <html>
     <body>
         <h2>Password recovery at ProductCatalog</h2>
-        <p>To complete password recovery visit the following link: <a href="127.0.0.1:8000/password-recovery/confirm/{{ access_token }}"></a></p>
+        <p>To complete password recovery visit the following link:
+            <a href="http://127.0.0.1:8000/password-recovery/confirm/{{ access_token }}">
+                http://127.0.0.1:8000/password-recovery/confirm/{{ access_token }}
+            </a>
+        </p>
         <span style="float: right">With best wishes, admin of ProductCatalog</span>
     </body>
 </html>
