--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -7,9 +7,7 @@
                 <h2>Login</h2>
 
                 {% if error %}
-                    <div class="card-panel red lighten-2">
-                        {{ error.messageKey|trans(error.messageData, 'security') }}
-                    </div>
+                    {% include 'form-error.html.twig' with {'error': error.messageKey|trans(error.messageData, 'security') , 'security': true} %}
                 {% endif %}
 
                 {% if message %}
