--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -22,6 +22,9 @@
                         <li><a href="{{ path('security_login') }}" class="btn">Login</a></li>
                         <li><a href="{{ path('user_register') }}" class="btn-flat">Register</a></li>
                     {% endif %}
+                    {% if is_granted('ROLE_PREVIOUS_ADMIN') %}
+                        <a href="{{ path('homepage', {'_switch_user': '_exit'}) }}">Exit impersonation</a>
+                    {% endif %}
                 </ul>
             </nav>
         </header>
