Category hierarchy added. Basic category management added: 	- add "/admin/category/new" 	- edit "/admin/category/{id}/edit" Small fix on user editing form.

--- a/app/Resources/views/admin/product/list.html.twig
+++ b/app/Resources/views/admin/product/list.html.twig
@@ -6,9 +6,12 @@
 
             <div class="col s12">
                 <div class="row valign-wrapper">
-                    <div class="col s10 valign"><h2>Products</h2></div>
+                    <div class="col s9 valign"><h2>Products</h2></div>
                     <div class="col s2 valign">
-                        <a href="{{ path('admin_product_new') }}" class="btn">Add<i class="material-icons right">add_circle_outline</i></a>
+                        <a href="{{ path('admin_product_new') }}" class="btn left"><i class="material-icons left">add_circle_outline</i>product</a>
+                    </div>
+                    <div class="col s2 valign">
+                        <a href="{{ path('admin_category_new') }}" class="btn"><i class="material-icons left">add_circle_outline</i>category</a>
                     </div>
                 </div>
                 <div class="col s12">
