Added KnpMenuBundle. Implemented basic menu. Styling fixes on product adding/editing form.

--- a/app/Resources/views/admin/product/_form.html.twig
+++ b/app/Resources/views/admin/product/_form.html.twig
@@ -1,3 +1,5 @@
+{% form_theme productForm 'form/fields.html.twig' %}
+
 {{ form_start(productForm) }}
     {{ form_row(productForm.name) }}
     {{ form_row(productForm.category) }}
