--- a/app/Resources/views/admin/product/formLayout.html.twig
+++ b/app/Resources/views/admin/product/formLayout.html.twig
@@ -7,7 +7,7 @@
 {% block javascripts %}
     {{ parent() }}
     <script>
-        jQuery(document).ready(function() {
+        $(document).ready(function() {
             $('.js-datepicker').pickadate({
                 selectMonths: true, // Creates a dropdown to control month
                 selectYears: 15, // Creates a dropdown of 15 years to control year
