--- a/app/Resources/views/form-error.html.twig
+++ b/app/Resources/views/form-error.html.twig
@@ -1,3 +1,5 @@
-<div class="recovery-error card-panel red lighten-2">
-        <span class="white-text">{{ error }}</span>
-</div>
+<script>
+    $(document).ready(function() {
+        Materialize.toast('{{ error }}', 3000);
+    });
+</script>
