--- a/app/Resources/views/password-recovery-confirm.html.twig
+++ b/app/Resources/views/password-recovery-confirm.html.twig
@@ -5,9 +5,6 @@
         <div class="row col s6 push-s3">
             <div class="col s12"><h2>Recover your password</h2></div>
             {{ form_start(form, {'class': 'col s12', 'id': "recovery-form-confirm"}) }}
-            {% if error %}
-                {% include 'form-error.html.twig' with {'error': form.errors, 'array': true} %}
-            {% endif %}
 
             <div class="input-field col s12">
                 {{ form_row(form.password.first, { 'class': 'validate' }) }}
@@ -20,3 +17,10 @@
         </div>
     </div>
 {% endblock body %}
+
+{% if error %}
+    {% block javascripts %}
+        {{ parent() }}
+        {% include 'form-error.html.twig' with {'error': error} %}
+    {% endblock %}
+{% endif %}
