--- a/app/Resources/views/password-recovery.html.twig
+++ b/app/Resources/views/password-recovery.html.twig
@@ -3,9 +3,6 @@
 {% block body %}
     <div class="row">
         <div class="row col s6 push-s3">
-            {% if error %}
-                {% include 'form-error.html.twig' with {'error': error} %}
-            {% endif %}
             <div class="col s12"><h2>Password recovery</h2></div>
             {{ form_start(form, {'class': 'col s12', 'id': "recovery-form-send"}) }}
                 <div class="input-field col s12">
@@ -17,3 +14,10 @@
         </div>
     </div>
 {% endblock body %}
+
+{% if error %}
+    {% block javascripts %}
+        {{ parent() }}
+        {% include 'form-error.html.twig' with {'error': error} %}
+    {% endblock %}
+{% endif %}
