--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -41,8 +41,8 @@
 
         {% block body %}{% endblock %}
         {% block javascripts %}
-            <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-            <script type="text/javascript" src="{{ asset('vendor/materialize/js/materialize.min.js') }}"></script>
+            <script src="https://code.jquery.com/jquery.js"></script>
+            <script src="{{ asset('vendor/materialize/js/materialize.min.js') }}"></script>
         {% endblock %}
     </body>
 </html>
