--- a/app/Resources/views/catalog.html.twig
+++ b/app/Resources/views/catalog.html.twig
@@ -6,7 +6,11 @@
 {% endblock %}
 
 {% block body %}
-    <div id="products" class="row"></div>
+    <div class="container">
+        <div class="row">
+            <div id="products" class="col s12"></div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block javascripts %}
