Somehow last commit changes were not applied. Applying those changes in this commit. Corrected a typo in "Security" directory name (therefore changes in "services.yml").

--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -17,7 +17,7 @@
                 {% endif %}
 
                 {{ form_start(form) }}
-                    {{ form_row(form._username) }}
+                    {{ form_row(form._username, { 'label': 'Email'}) }}
                     {{ form_row(form._password) }}
 
                     <button type="submit" class="btn">Login<i class="material-icons right">lock</i></button>
