Testing breadcrumbs and menu

--- a/app/Resources/views/admin/category/_form.html.twig
+++ b/app/Resources/views/admin/category/_form.html.twig
@@ -4,4 +4,5 @@
     {{ form_row(categoryForm.active) }}
 
     <button type="submit" class="btn" formnovalidate>{{ buttonText }}</button>
+    <a href="{{ path('admin_product_list') }}" class="btn red lighten-1">Cancel</a>
 {{ form_end(categoryForm) }}
