--- a/app/Resources/views/admin/product/_form.html.twig
+++ b/app/Resources/views/admin/product/_form.html.twig
@@ -10,4 +10,5 @@
     {{ form_row(productForm.isActive) }}
 
     <button type="submit" class="btn" formnovalidate>{{ buttonText }}</button>
+    <a href="{{ path('admin_product_list') }}" class="btn red lighten-1">Cancel</a>
 {{ form_end(productForm) }}
