--- a/app/Resources/views/admin/product/list.html.twig
+++ b/app/Resources/views/admin/product/list.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    {% include 'breadcrumbs.html.twig' %}
     <div class="container">
         <div class="row">
-
             <div class="col s12">
                 <div class="row valign-wrapper">
                     <div class="col s9 valign"><h2>Products</h2></div>
@@ -28,6 +28,7 @@
                                 <th>Updated at</th>
                                 {% if is_granted("ROLE_MANAGE_PRODUCT") %}
                                     <th> </th>
+                                    <th> </th>
                                 {% endif %}
                             </tr>
                         </thead>
@@ -42,9 +43,12 @@
                                 <td>{{ product.createdAt|date("d/m/Y") }}</td>
                                 <td>{{ product.updatedAt|date("d/m/Y") }}</td>
                                 {% if is_granted("ROLE_MANAGE_PRODUCT") %}
-                                <td>
-                                    <a href="{{ path('admin_product_edit', {'id': product.id}) }}"><i class="material-icons grey-text">edit</i></a>
-                                </td>
+                                    <td>
+                                        <a href="{{ path('admin_product_edit', {'id': product.id}) }}"><i class="material-icons grey-text">edit</i></a>
+                                    </td>
+                                    <td>
+                                        <a href="{{ path('admin_product_delete', {'id': product.id}) }}"><i class="material-icons grey-text">delete</i></a>
+                                    </td>
                                 {% endif %}
                             </tr>
                         {% endfor %}
