--- a/app/Resources/views/user/userList.html.twig
+++ b/app/Resources/views/user/userList.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    {% include 'breadcrumbs.html.twig' %}
     <div class="container">
         <div class="row">
             <div class="col s12">
