--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -41,7 +41,10 @@
 
         {% block body %}{% endblock %}
         {% block javascripts %}
-            <script src="https://code.jquery.com/jquery.js"></script>
+            <script src="http://code.jquery.com/jquery-2.2.4.min.js"
+                    integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+                    crossorigin="anonymous">
+            </script>
             <script src="{{ asset('vendor/materialize/js/materialize.min.js') }}"></script>
         {% endblock %}
     </body>
