--- a/app/Resources/views/catalog.html.twig
+++ b/app/Resources/views/catalog.html.twig
@@ -6,15 +6,15 @@
 {% endblock %}
 
 {% block body %}
-    <div class="container">
         <div class="row">
-            <div id="products" class="col s12"></div>
+            <div id="products" class="col s10 push-s2"></div>
         </div>
-    </div>
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
+    <script src="{{ asset('js/jquery.twbsPagination.js') }}"></script>
     <script src="{{ asset('js/jquery.ajaxGrid.js') }}"></script>
     <script src="{{ asset('js/catalog.js') }}"></script>
+
 {% endblock %}
